@@ -12,6 +12,7 @@ Month day, 2004 - 3.5.3
 ! [Herve Drolon] improved FreeImage_RotateClassic
 + [Herve Drolon] added support for transparency saving in ICO plugin
 + [Herve Drolon] added support for 1-bit images to FreeImage_RotateClassic
++ [Herve Drolon] added FreeImage_SetDotsPerMeterX and FreeImage_SetDotsPerMeterY
 * [Nan Feng] fixed memory leak in FreeImage_DeleteTag (internal stuff)
 * [Nigel Stewart] added conditional #pragma with #ifdef _MSC_VER / #endif
 
